# django-llm-audit

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: manage.py  report.md  requirements.txt
demo/demo/: asgi.py  settings.py  urls.py  wsgi.py
demo/store/: admin.py  apps.py  models.py
demo/store/management/commands/: seed_data.py
demo/store/migrations/: 0001_initial.py
llm_audit/: __init__.py  apps.py  chunker.py  conf.py  exceptions.py  formatters.py  prompts.py  serializer.py  summarizer.py
llm_audit/backends/: __init__.py  anthropic.py  base.py  mock.py  ollama.py  openai.py
llm_audit/management/commands/: audit_model.py
llm_audit/schemas/: __init__.py  report.py
tests/: conftest.py  settings.py  test_backends.py  test_chunker.py  test_conf.py  test_formatters.py  test_management_command.py  test_schemas.py  test_serializer.py  test_summarizer.py
tests/testapp/: apps.py  models.py
