[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-llm-audit"
description = "Point an LLM at any Django model and get plain-English summaries, trends, and anomaly reports from the terminal."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Sulav Raj Bista" }]
keywords = ["django", "llm", "anthropic", "openai", "audit", "summarization", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies = [
    "Django>=4.2",
    "pydantic>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
all = ["anthropic>=0.40", "openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.0",
    "pre-commit>=3.7",
    "faker>=25.0",
]

[project.urls]
Homepage = "https://github.com/sulavrajbista/django-llm-audit"
Repository = "https://github.com/sulavrajbista/django-llm-audit"
Changelog = "https://github.com/sulavrajbista/django-llm-audit/blob/master/CHANGELOG.md"

[tool.hatch.version]
path = "llm_audit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["llm_audit"]

[tool.hatch.build.targets.sdist]
include = ["llm_audit", "README.md", "LICENSE", "CHANGELOG.md"]
exclude = ["demo", "tests", "docs", "CLAUDE.md"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]
ignore = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
